[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/DefaultWorld/Weapons/Pistol/TargetBoard/TargetBoard.gd" type="Script" id=1]
[ext_resource path="res://Scenes/DefaultWorld/Weapons/Pistol/TargetBoard/view_finder.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 45.5476 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.6382, 45.7867 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.6776, 45.7867 )

[node name="TargetBoard" type="Node2D"]
script = ExtResource( 1 )

[node name="MiddleArea" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MiddleArea"]
shape = SubResource( 1 )

[node name="OutsideArea" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutsideArea"]
position = Vector2( 38, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutsideArea"]
position = Vector2( -38, 0 )
shape = SubResource( 3 )

[node name="ViewFinder" type="Position2D" parent="."]
position = Vector2( -100, 0 )

[node name="Sprite" type="Sprite" parent="ViewFinder"]
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
[connection signal="cycleCompleted" from="." to="." method="_on_TargetBoard_cycleCompleted"]
[connection signal="area_entered" from="MiddleArea" to="." method="_on_MiddleArea_area_entered"]
[connection signal="area_entered" from="OutsideArea" to="." method="_on_OutsideArea_area_entered"]
